--- a/vscode-client/package.json
+++ b/vscode-client/package.json
@@ -25,6 +25,11 @@
                     "default": "pyls",
                     "description": "Language server executable"
                 },
+                "pyls.showPluginNames": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Include python plugin name in messages."
+                },
                 "pyls.configurationSources": {
                     "type": "array",
                     "default": ["pycodestyle"],
